--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -18,3 +18,11 @@
     border-radius: 5px;
     width: 10rem;
 }
+
+.addSection{
+    display: flex;
+    flex-direction: row;
+    margin: 2rem;
+    justify-content: center;
+    gap: 1rem;
+}
